--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -55,7 +55,7 @@ tasks:
       - test -f {{.BOOTSTRAP_DIR}}/talos/talsecret.sops.yaml
 
   talos:
-    desc: Bootstrap Talos [CLUSTER=main]
+    desc: Bootstrap Talos [CLUSTER=pi5]
     cmds:
       - until talosctl --nodes {{.TALOS_CONTROLLER}} bootstrap --talosconfig {{.BOOTSTRAP_DIR}}/talos/clusterconfig/talosconfig; do sleep 5; done
       - talosctl kubeconfig --nodes {{.TALOS_CONTROLLER}} --force --force-context-name {{.CLUSTER}} {{.CLUSTER_DIR}} --talosconfig {{.BOOTSTRAP_DIR}}/talos/clusterconfig/talosconfig
@@ -70,7 +70,7 @@ tasks:
       - which talosctl jq
 
   apps:
-    desc: Bootstrap Apps [CLUSTER=main]
+    desc: Bootstrap Apps [CLUSTER=pi5]
     prompt: Bootstrap apps into the Talos cluster?
     cmds:
       - until kubectl wait nodes --for=condition=Ready=False --all --timeout=10m; do sleep 5; done
