fix: update taskfile

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,7 +6,7 @@ set: [pipefail]
 shopt: [globstar]
 
 vars:
-  CLUSTER: '{{.CLUSTER | default "main"}}'
+  CLUSTER: '{{.CLUSTER | default "pi5"}}'
   CLUSTER_DIR: '{{.ROOT_DIR}}/kubernetes/{{.CLUSTER}}'
   BOOTSTRAP_DIR: '{{.CLUSTER_DIR}}/bootstrap'
 
