feat: refactor bootstrap dir

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,7 +8,8 @@ shopt: [globstar]
 vars:
   CLUSTER: '{{.CLUSTER | default "main"}}'
   CLUSTER_DIR: '{{.ROOT_DIR}}/kubernetes/{{.CLUSTER}}'
-  BOOTSTRAP_DIR: '{{.CLUSTER_DIR}}/bootstrap'
+  BOOTSTRAP_TALOS_DIR: '{{.CLUSTER_DIR}}/talos'
+  BOOTSTRAP_DIR: '{{.ROOT_DIR}}/kubernetes/shared/bootstrap'
 
 env:
   KUBECONFIG: '{{.CLUSTER_DIR}}/kubeconfig'
