--- a/kubernetes/shared/bootstrap/helmfile.yaml
+++ b/kubernetes/shared/bootstrap/helmfile.yaml
@@ -60,7 +60,7 @@ releases:
     values:
       - ../../apps/external-secrets/external-secrets/app/helm-values.yaml
     needs:
-      - kube-system/coredns
+      - cert-manager/cert-manager
 
   - name: kustomize-mutating-webhook
     namespace: flux-system
@@ -69,7 +69,7 @@ releases:
     values:
       - ../../apps/flux-system/kustomize-mutating-webhook/app/helm-values.yaml
     needs:
-      - kube-system/coredns
+      - external-secrets/external-secrets
 
   - name: flux-operator
     namespace: flux-system
