--- a/kubernetes/pi5/flux/cluster/ks.yaml
+++ b/kubernetes/pi5/flux/cluster/ks.yaml
@@ -3,29 +3,6 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-shared
-  namespace: flux-system
-spec:
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
-  interval: 30m
-  path: ./kubernetes/shared
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
-  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
-  targetNamespace: flux-system
-  timeout: 5m
-  wait: true
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
   name: cluster-meta
   namespace: flux-system
 spec:
@@ -49,6 +26,29 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: cluster-shared-meta
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  interval: 30m
+  path: ./kubernetes/shared/meta
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
+  targetNamespace: flux-system
+  timeout: 5m
+  wait: true
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: cluster-apps
   namespace: flux-system
 spec:
@@ -58,7 +58,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: cluster-meta
-    - name: cluster-shared
+    - name: cluster-shared-meta
   interval: 30m
   path: ./kubernetes/pi5/apps
   prune: true
