feat: update workflow

--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -8,7 +8,7 @@ on:
     paths:
       - kubernetes/**/apps/**
       - kubernetes/**/flux/**
-      - kubernetes/shared/**
+      - kubernetes/shared/meta**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
