feat: cleanup taskfile env vars

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -12,10 +12,9 @@ vars:
   BOOTSTRAP_DIR: '{{.ROOT_DIR}}/kubernetes/shared/bootstrap'
 
 env:
-  KUBECONFIG: '{{.CLUSTER_DIR}}/kubeconfig'
   MINIJINJA_CONFIG_FILE: '{{.ROOT_DIR}}/.minijinja.toml'
   SOPS_AGE_KEY_FILE: '{{.ROOT_DIR}}/age.key'
-  TALOSCONFIG: '{{.CLUSTER_DIR}}/talos/clusterconfig/talosconfig'
+  TALOSCONFIG: '{{.BOOTSTRAP_TALOS_DIR}}/clusterconfig/talosconfig'
 
 includes:
   bootstrap: .taskfiles/bootstrap
