--- a/kubernetes/main/apps/kube-tools/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/main/apps/kube-tools/system-upgrade-controller/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app system-upgrade-controller
+  name: &app system-upgrade
 spec:
   interval: 30m
   chart:
@@ -24,7 +24,7 @@ spec:
       retries: 3
   values:
     controllers:
-      system-upgrade-controller:
+      system-upgrade:
         strategy: RollingUpdate
         containers:
           app:
@@ -38,7 +38,7 @@ spec:
               SYSTEM_UPGRADE_JOB_BACKOFF_LIMIT: 99
               SYSTEM_UPGRADE_JOB_IMAGE_PULL_POLICY: IfNotPresent
               SYSTEM_UPGRADE_JOB_KUBECTL_IMAGE: registry.k8s.io/kubectl:v1.32.1
-              SYSTEM_UPGRADE_JOB_POD_REPLACEMENT_POLICY: Failed # Required for Talos
+              SYSTEM_UPGRADE_JOB_POD_REPLACEMENT_POLICY: Failed
               SYSTEM_UPGRADE_JOB_PRIVILEGED: true
               SYSTEM_UPGRADE_JOB_TTL_SECONDS_AFTER_FINISH: 900
               SYSTEM_UPGRADE_PLAN_POLLING_INTERVAL: 15m
@@ -51,15 +51,7 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
-              seccompProfile:
-                type: RuntimeDefault
     defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 100
-        fsGroupChangePolicy: OnRootMismatch
-        seccompProfile: { type: RuntimeDefault }
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -67,33 +59,36 @@ spec:
               - matchExpressions:
                   - key: node-role.kubernetes.io/control-plane
                     operator: Exists
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 100
+        seccompProfile: { type: RuntimeDefault }
       tolerations:
-        - key: CriticalAddonsOnly
-          operator: Exists
         - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
     serviceAccount:
+      name: *app
       create: true
-      name: system-upgrade
     persistence:
-      tmp:
-        type: emptyDir
-      etc-ssl:
+      host-etc-ssl:
         type: hostPath
         hostPath: /etc/ssl
         hostPathType: DirectoryOrCreate
         globalMounts:
           - readOnly: true
-      etc-pki:
+      host-etc-pki:
         type: hostPath
         hostPath: /etc/pki
         hostPathType: DirectoryOrCreate
         globalMounts:
           - readOnly: true
-      etc-ca-certificates:
+      host-etc-ca-certificates:
         type: hostPath
         hostPath: /etc/ca-certificates
         hostPathType: DirectoryOrCreate
         globalMounts:
           - readOnly: true
+      tmp:
+        type: emptyDir
