--- a/kubernetes/main/apps/kube-tools/system-upgrade-controller/plans/kubernetes.yaml
+++ b/kubernetes/main/apps/kube-tools/system-upgrade-controller/plans/kubernetes.yaml
@@ -6,40 +6,30 @@ metadata:
   name: kubernetes
 spec:
   version: ${KUBERNETES_VERSION}
-  serviceAccountName: system-upgrade
-  secrets:
-    - name: talos
-      path: /var/run/secrets/talos.dev
-      ignoreUpdates: true
   concurrency: 1
   exclusive: true
+  serviceAccountName: system-upgrade
+  secrets:
+    - name: system-upgrade
+      path: /var/run/secrets/talos.dev
+      ignoreUpdates: true
   nodeSelector:
     matchExpressions:
-      - key: feature.node.kubernetes.io/system-os_release.ID
-        operator: In
-        values: ["talos"]
       - key: node-role.kubernetes.io/control-plane
         operator: Exists
-  tolerations:
-    - key: CriticalAddonsOnly
-      operator: Exists
-    - key: node-role.kubernetes.io/control-plane
-      operator: Exists
-      effect: NoSchedule
   prepare: &prepare
     image: ghcr.io/siderolabs/talosctl:${TALOS_VERSION}
     envs:
-      - name: NODE_IP
+      - name: NODE
         valueFrom:
           fieldRef:
             fieldPath: status.hostIP
     args:
-      - --nodes=$(NODE_IP)
+      - --nodes=$(NODE)
       - health
-      - --server=false
   upgrade:
     <<: *prepare
     args:
-      - --nodes=$(NODE_IP)
+      - --nodes=$(NODE)
       - upgrade-k8s
       - --to=$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
