feat: test making reloader a shared app

--- a/kubernetes/main/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/main/apps/kube-tools/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./intel-device-plugins/ks.yaml
   - ./node-feature-discovery/ks.yaml
   # - ./powertune/ks.yaml
-  - ./reloader/ks.yaml
+  - ./reloader.yaml
   - ./spegel/ks.yaml
   - ./system-upgrade-controller/ks.yaml
 components:
