--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -6,8 +6,7 @@ namespace: kube-tools
 resources:
   - ./fstrim/ks.yaml
   - ./node-feature-discovery/ks.yaml
-  # - ./powertune/ks.yaml
-  - ./reloader/ks.yaml
+  - ./reloader.yaml
   - ./system-upgrade-controller/ks.yaml
 components:
   - ../../../shared/meta/components/alerts
