--- a/kubernetes/utility/apps/kube-tools/reloader.yaml
+++ b/kubernetes/utility/apps/kube-tools/reloader.yaml
@@ -3,13 +3,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app powertune
+  name: &app reloader
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 30m
-  path: ./kubernetes/utility/apps/kube-tools/powertune/app
+  path: ./kubernetes/shared/meta/apps/reloader/app
   prune: true
   sourceRef:
     kind: GitRepository
