--- a/kubernetes/shared/meta/apps/reloader/helmrelease.yaml
+++ b/kubernetes/shared/meta/apps/reloader/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: reloader
+  name: &app reloader
 spec:
   interval: 30m
   chart:
@@ -23,7 +23,7 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    fullnameOverride: reloader
+    fullnameOverride: *app
     reloader:
       readOnlyRootFileSystem: true
       podMonitor:
