--- a/kubernetes/main/flux/cluster/ks.yaml
+++ b/kubernetes/main/flux/cluster/ks.yaml
@@ -17,6 +17,8 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
+  targetNamespace: flux-system
   timeout: 5m
   wait: true
 ---
@@ -38,6 +40,8 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
+  targetNamespace: flux-system
   timeout: 5m
   wait: true
 ---
