--- a/kubernetes/utility/apps/cert-manager/kustomization.yaml
+++ b/kubernetes/utility/apps/cert-manager/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
 resources:
-  - ./cert-manager/ks.yaml
+  - ./cert-manager.yaml
 components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/namespace
