--- a/kubernetes/shared/bootstrap/helmfile.yaml
+++ b/kubernetes/shared/bootstrap/helmfile.yaml
@@ -46,7 +46,7 @@ releases:
     chart: jetstack/cert-manager
     version: v1.16.3
     values:
-      - ../../apps/cert-manager/cert-manager/app/helm-values.yaml
+      - ../apps/cert-manager/app/helm-values.yaml
     needs:
       - kube-system/coredns
 
