--- a/kubernetes/utility/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/utility/apps/external-secrets/kustomization.yaml
@@ -4,8 +4,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: external-secrets
 resources:
-  - ./external-secrets/ks.yaml
-  - ./onepassword/ks.yaml
+  - ./external-secrets.yaml
+  - ./onepassword.yaml
 components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/namespace
