feat: disable hr sync workflow

--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -18,7 +18,7 @@ on:
         required: true
   pull_request:
     branches: ["main"]
-    paths: ["kubernetes/**/helmrelease.yaml"]
+    # paths: ["kubernetes/**/helmrelease.yaml"]
 
 jobs:
   sync:
