feat: disable hr sync  workflow

--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -16,9 +16,9 @@ on:
       helmRepoName:
         description: Helm Repository Name
         required: true
-  pull_request:
-    branches: ["main"]
-    # paths: ["kubernetes/**/helmrelease.yaml"]
+  # pull_request:
+  #   branches: ["main"]
+  #   paths: ["kubernetes/**/helmrelease.yaml"]
 
 jobs:
   sync:
