feat: add flux-operator

--- a/kubernetes/shared/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/shared/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -15,7 +15,7 @@ instance:
     name: flux-system
     url: https://github.com/joryirving/home-ops.git
     ref: refs/heads/main
-    path: kubernetes/main/flux/cluster
+    path: kubernetes/${CLUSTER}/flux/cluster
   commonMetadata:
     labels:
       app.kubernetes.io/name: flux
