--- a/kubernetes/shared/apps/flux-system/flux-operator/instance/webhook/externalsecret.yaml
+++ b/kubernetes/shared/apps/flux-system/flux-operator/instance/webhook/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     name: *name
     template:
       data:
-        token: "{{ .FLUX_GITHUB_WEBHOOK_TOKEN }}"
+        token: "{{ .${TOKEN_KEY_NAME} }}"
   dataFrom:
     - extract:
         key: flux
