--- a/kubernetes/main/apps/flux-system/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - ./flux-operator/ks.yaml
+  - ./flux-operator.yaml
   - ./kustomize-mutating-webhook/ks.yaml
   - ./weave-gitops/ks.yaml
 components:
