--- a/kubernetes/shared/apps/flux-system/flux-operator/instance/webhook/ingress.yaml
+++ b/kubernetes/shared/apps/flux-system/flux-operator/instance/webhook/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: external
   rules:
-    - host: flux-webhook.jory.dev
+    - host: ${WEBHOOK_INGRESS}.jory.dev
       http:
         paths:
           - path: /hook/
