feat: add weave-gitops

--- a/kubernetes/main/apps/flux-system/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: flux-system
 resources:
   - ./flux-operator.yaml
   - ./kustomize-mutating-webhook/ks.yaml
-  - ./weave-gitops/ks.yaml
+  - ./weave-gitops.yaml
 components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/namespace
