--- a/kubernetes/shared/apps/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/shared/apps/flux-system/weave-gitops/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
       enabled: true
       className: internal
       hosts:
-        - host: gitops-utility.jory.dev
+        - host: gitops.jory.dev
           paths:
             - path: /
               pathType: Prefix
@@ -41,6 +41,5 @@ spec:
       enabled: true
     rbac:
       create: true
-      impersonationResourceNames: ["admin"]
     podAnnotations:
       secret.reloader.stakater.com/reload: cluster-user-auth
