--- a/kubernetes/utility/apps/flux-system/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./flux-operator.yaml
   - ./kustomize-mutating-webhook/ks.yaml
   - ./tofu-controller/ks.yaml
-  - ./weave-gitops/ks.yaml
+  - ./weave-gitops.yaml
 components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/namespace
