--- a/kubernetes/shared/meta/repositories/helm/intel.yaml
+++ b/kubernetes/shared/meta/repositories/helm/intel.yaml
@@ -6,6 +6,5 @@ metadata:
   name: intel
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 1h
   url: https://intel.github.io/helm-charts
-  timeout: 3m
