--- a/kubernetes/shared/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/shared/meta/repositories/helm/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ./fluxcd-community.yaml
   - ./fluxcd-kustomize-mutating-webhook.yaml
   - ./grafana.yaml
+  - ./headlamp.yaml
   - ./ingress-nginx.yaml
   - ./intel.yaml
   - ./jetstack.yaml
