--- a/kubernetes/main/apps/flux-system/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/kustomization.yaml
@@ -4,10 +4,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - ./clickops/ks.yaml
   - ./flux-operator/ks.yaml
+  - ./headlamp/ks.yaml
   - ./kustomize-mutating-webhook/ks.yaml
-  - ./weave-gitops/ks.yaml
 components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/namespace
