--- a/kubernetes/shared/meta/repositories/helm/fluxcd-kustomize-mutating-webhook.yaml
+++ b/kubernetes/shared/meta/repositories/helm/fluxcd-kustomize-mutating-webhook.yaml
@@ -6,5 +6,5 @@ metadata:
   name: fluxcd-kustomize-mutating-webhook
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 1h
   url: https://xunholy.github.io/fluxcd-kustomize-mutating-webhook
