--- a/kubernetes/shared/meta/repositories/helm/headlamp.yaml
+++ b/kubernetes/shared/meta/repositories/helm/headlamp.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: wiremind
+  name: headlamp
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://wiremind.github.io/wiremind-helm-charts/
+  url: https://headlamp-k8s.github.io/headlamp/
