--- a/kubernetes/utility/apps/flux-system/headlamp/ks.yaml
+++ b/kubernetes/utility/apps/flux-system/headlamp/ks.yaml
@@ -3,18 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app weave-gitops
+  name: &app headlamp
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: authentik
-      namespace: security
-    - name: onepassword-store
-      namespace: external-secrets
+    - name: cert-manager
+      namespace: cert-manager
   interval: 30m
-  path: ./kubernetes/main/apps/flux-system/weave-gitops/app
+  path: ./kubernetes/utility/apps/flux-system/headlamp/app
   prune: true
   sourceRef:
     kind: GitRepository
