--- a/kubernetes/utility/apps/flux-system/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomization.yaml
@@ -4,11 +4,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - ./capacitor/ks.yaml
   - ./flux-operator/ks.yaml
+  - ./headlamp/ks.yaml
   - ./kustomize-mutating-webhook/ks.yaml
   - ./tofu-controller/ks.yaml
-  - ./weave-gitops/ks.yaml
 components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/namespace
