--- a/kubernetes/shared/bootstrap/helmfile.yaml
+++ b/kubernetes/shared/bootstrap/helmfile.yaml
@@ -28,7 +28,7 @@ releases:
     chart: cilium/cilium
     version: 1.16.6
     values:
-      - ../../apps/kube-system/cilium/app/helm-values.yaml
+      - ../../{{ requiredEnv "CLUSTER" }}/apps/kube-system/cilium/app/helm-values.yaml
     needs:
       - observability/kube-prometheus-stack-crds
 
@@ -37,7 +37,7 @@ releases:
     chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.39.0
     values:
-      - ../../apps/kube-system/coredns/app/helm-values.yaml
+      - ../../{{ requiredEnv "CLUSTER" }}/apps/kube-system/coredns/app/helm-values.yaml
     needs:
       - kube-system/cilium
 
@@ -46,7 +46,7 @@ releases:
     chart: jetstack/cert-manager
     version: v1.16.3
     values:
-      - ../../apps/cert-manager/cert-manager/app/helm-values.yaml
+      - ../../{{ requiredEnv "CLUSTER" }}/apps/cert-manager/cert-manager/app/helm-values.yaml
     needs:
       - kube-system/coredns
 
@@ -55,7 +55,7 @@ releases:
     chart: oci://ghcr.io/external-secrets/charts/external-secrets
     version: 0.13.0
     values:
-      - ../../apps/external-secrets/external-secrets/app/helm-values.yaml
+      - ../../{{ requiredEnv "CLUSTER" }}/apps/external-secrets/external-secrets/app/helm-values.yaml
     needs:
       - cert-manager/cert-manager
 
@@ -64,7 +64,7 @@ releases:
     chart: fluxcd-kustomize-mutating-webhook/kustomize-mutating-webhook
     version: 0.3.0
     values:
-      - ../../apps/flux-system/kustomize-mutating-webhook/app/helm-values.yaml
+      - ../../{{ requiredEnv "CLUSTER" }}/apps/flux-system/kustomize-mutating-webhook/app/helm-values.yaml
     needs:
       - external-secrets/external-secrets
 
@@ -82,7 +82,7 @@ releases:
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
     values:
-      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
+      - ../../{{ requiredEnv "CLUSTER" }}/apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
       - kube-system/wipe-rook
 
@@ -92,6 +92,6 @@ releases:
     version: 0.13.0
     wait: false
     values:
-      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
+      - ../../{{ requiredEnv "CLUSTER" }}/apps/flux-system/flux-operator/instance/helm-values.yaml
     needs:
       - flux-system/flux-operator
