--- a/kubernetes/main/apps/flux-system/headlamp/app/rbac.yaml
+++ b/kubernetes/main/apps/flux-system/headlamp/app/rbac.yaml
@@ -14,3 +14,16 @@ metadata:
   annotations:
     kubernetes.io/service-account.name: "headlamp-admin"
 type: kubernetes.io/service-account-token
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: &name headlamp-admin
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+  - kind: ServiceAccount
+    name: *name
+    namespace: flux-system
