feat: update creds for utility

--- a/kubernetes/utility/apps/flux-system/headlamp/app/pushsecret.yaml
+++ b/kubernetes/utility/apps/flux-system/headlamp/app/pushsecret.yaml
@@ -15,7 +15,7 @@ spec:
     engineVersion: v2
     data:
       password: '{{.token}}'
-      website: 'https://headlamp.jory.dev'
+      website: 'https://headlamp-${CLUSTER}.jory.dev'
   data:
     - match:
         secretKey: token
