--- a/kubernetes/utility/apps/flux-system/headlamp/ks.yaml
+++ b/kubernetes/utility/apps/flux-system/headlamp/ks.yaml
@@ -8,9 +8,6 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: cert-manager
-      namespace: cert-manager
   interval: 30m
   path: ./kubernetes/utility/apps/flux-system/headlamp/app
   prune: true
@@ -21,3 +18,6 @@ spec:
   targetNamespace: flux-system
   timeout: 5m
   wait: false
+  postBuild:
+    substitute:
+      CLUSTER: utility
