feat: add requests to authentik, because HPA

--- a/kubernetes/main/apps/security/authentik/app/helmrelease.yaml
+++ b/kubernetes/main/apps/security/authentik/app/helmrelease.yaml
@@ -38,6 +38,11 @@ spec:
       autoscaling:
         enabled: true
         minReplicas: 2
+      resources:
+        requests:
+          cpu: 200m
+        limits:
+          memory: 1Gi
       metrics:
         prometheus:
           serviceMonitor:
@@ -62,3 +67,8 @@ spec:
       autoscaling:
         enabled: true
         minReplicas: 2
+      resources:
+        requests:
+          cpu: 200m
+        limits:
+          memory: 1Gi
